# data-contract-cli

./: .gitignore  README.md  pyproject.toml
contracts/: README.md  contract-template.yaml
examples/: example.csv  valid-contract.yaml
